以前没有提交的

--- a/overseas/M/421.html
+++ b/overseas/M/421.html
@@ -143,7 +143,7 @@
     <!--s 秒杀楼层-->
     <section class="wrap-flr" id="flr1">
         <div class="floor-title">
-            <h2 class="flr-hd-1 flr-hd"><img src="http://img12.360buyimg.com/cms/jfs/t2200/199/2649588048/2963/6098ac0f/5710b0d7Neb268059.png" alt=""/></h2>
+            <h2 class="flr-hd-1 flr-hd"><img src="//img12.360buyimg.com/cms/jfs/t2200/199/2649588048/2963/6098ac0f/5710b0d7Neb268059.png" alt=""/></h2>
         </div>
         <div class="floor-bd">
             <div class="miaosha-tab">
@@ -179,7 +179,7 @@
                     </div>
                     <div class="miaosha-ct-list goods-list">
                         <!-- 今日秒杀列表：不显示请用行内样式控制 -->
-                        <ul class="clearfix wrap-goods" marketstart="0" marketlength="4"  markettplid="list1Tpl" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw1570f9918477b2.js" id="" marketonload="xmlLoad(1);" style="display: block"></ul>
+                        <ul class="clearfix wrap-goods" marketstart="0" marketlength="4"  markettplid="list1Tpl" marketurl="//acen.jd.com/tjw/get/tjw2015/tjw1570f9918477b2.js" id="" marketonload="xmlLoad(1);" style="display: block"></ul>
                     </div>
                 </div>
                 <div class="miaosha-ct">
@@ -188,7 +188,7 @@
                     </div>
                     <div class="miaosha-ct-list goods-list">
                         <!-- 下期秒杀列表：不显示请用行内样式控制 -->
-                        <ul class="clearfix wrap-goods miaosha-next" marketstart="0" marketlength="4" markettplid="miaoNextTpl" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw1570f9e01a83ca.js" id="" marketonload="xmlLoad(1);"></ul>
+                        <ul class="clearfix wrap-goods miaosha-next" marketstart="0" marketlength="4" markettplid="miaoNextTpl" marketurl="//acen.jd.com/tjw/get/tjw2015/tjw1570f9e01a83ca.js" id="" marketonload="xmlLoad(1);"></ul>
                     </div>
                 </div>
             </div>
@@ -197,7 +197,7 @@
     </section>
     <!--e 秒杀楼层-->
     <section class="winphone wrap-flr">
-        <a href="//m.vk.com/jd" hasclstag="true"><img src="http://img12.360buyimg.com/cms/jfs/t2335/6/2685491951/22733/49cfebba/5710dea7N53c1f821.png" alt="" width="100%"/></a>
+        <a href="//m.vk.com/jd" hasclstag="true"><img src="//img12.360buyimg.com/cms/jfs/t2335/6/2685491951/22733/49cfebba/5710dea7N53c1f821.png" alt="" width="100%"/></a>
     </section>
     <!-- S 导航 -->
     <nav class="wrap-menu">
@@ -217,7 +217,7 @@
                 <h2 class="flr-hd-2 flr-hd"><img src="//img13.360buyimg.com/cms/jfs/t2875/164/382721381/3093/d48d590d/5710b0d7Nf3b6be24.png" alt=""/></h2>
             </div>
             <div class="floor-bd">
-                <ul class="goods-list clearfix"  markettplid="listHot" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw1570f9fd530ee2.js" id="" marketonload="xmlLoad(1);"></ul>
+                <ul class="goods-list clearfix"  markettplid="listHot" marketurl="//acen.jd.com/tjw/get/tjw2015/tjw1570f9fd530ee2.js" id="" marketonload="xmlLoad(1);"></ul>
             </div>
             <div class="floor-ft">
                 <a href="//m.jd.ru/channel/smartphone.html" hasclstag="true"><image init_src="//img11.360buyimg.com/cms/jfs/t2242/348/2683669451/12469/7d9e3c7e/5710b0d9N2cb2e108.png"></image></a>
@@ -231,7 +231,7 @@
                 <h2 class="flr-hd-3 flr-hd"><img src="//img11.360buyimg.com/cms/jfs/t2785/165/393060968/3458/f219c651/5710b0d8N27cf542f.png" alt=""/></h2>
             </div>
             <div class="floor-bd">
-                <ul class="goods-list clearfix"  markettplid="listHot" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw1570f9febc6780.js" id="" marketonload="xmlLoad(1);"></ul>
+                <ul class="goods-list clearfix"  markettplid="listHot" marketurl="//acen.jd.com/tjw/get/tjw2015/tjw1570f9febc6780.js" id="" marketonload="xmlLoad(1);"></ul>
             </div>
             <div class="floor-ft">
                 <a href="//m.jd.ru/channel/ru/it_digitals.html" hasclstag="true"><image init_src="//img12.360buyimg.com/cms/jfs/t2248/11/2630015311/16476/4cd51ab7/5710b0d9N39fd3086.png"></image></a>
@@ -241,10 +241,10 @@
         <!--s 常规商品楼层-->
         <section class="goodsList-block menu-goods-block wrap-flr" id="flr4">
             <div class="floor-title">
-                <h2 class="flr-hd-4 flr-hd"><img src="http://img11.360buyimg.com/cms/jfs/t2584/300/405149655/3263/f810b3b8/5710b0d8Nd442e272.png" alt=""/></h2>
+                <h2 class="flr-hd-4 flr-hd"><img src="//img11.360buyimg.com/cms/jfs/t2584/300/405149655/3263/f810b3b8/5710b0d8Nd442e272.png" alt=""/></h2>
             </div>
             <div class="floor-bd">
-                <ul class="goods-list clearfix"  markettplid="listHot" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw1570fa002d5265.js" id="" marketonload="xmlLoad(1);"></ul>
+                <ul class="goods-list clearfix"  markettplid="listHot" marketurl="//acen.jd.com/tjw/get/tjw2015/tjw1570fa002d5265.js" id="" marketonload="xmlLoad(1);"></ul>
             </div>
             <div class="floor-ft">
                 <a href="//esale.jd.ru/m/act/sSc1APimpnL0lhrX.html" hasclstag="true"><image init_src="//img13.360buyimg.com/cms/jfs/t2338/209/2639781208/18872/2207fa82/5710b0d9N0864e134.png"></image></a>
@@ -254,10 +254,10 @@
         <!--s 常规商品楼层-->
         <section class="goodsList-block menu-goods-block wrap-flr" id="flr5">
             <div class="floor-title">
-                <h2 class="flr-hd-5 flr-hd"><img src="http://img10.360buyimg.com/cms/jfs/t2785/166/363589317/3272/235aaff4/5710b0d8Nb0d7088a.png" alt=""/></h2>
+                <h2 class="flr-hd-5 flr-hd"><img src="//img10.360buyimg.com/cms/jfs/t2785/166/363589317/3272/235aaff4/5710b0d8Nb0d7088a.png" alt=""/></h2>
             </div>
             <div class="floor-bd">
-                <ul class="goods-list clearfix"  markettplid="listHot" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw1570fa017ca21e.js" id="" marketonload="xmlLoad(1);"></ul>
+                <ul class="goods-list clearfix"  markettplid="listHot" marketurl="//acen.jd.com/tjw/get/tjw2015/tjw1570fa017ca21e.js" id="" marketonload="xmlLoad(1);"></ul>
             </div>
             <div class="floor-ft">
                 <a href="//m.jd.ru/channel/ru/home_appliances.htm" hasclstag="true"><image init_src="//img12.360buyimg.com/cms/jfs/t2818/134/375246043/16923/576ab0eb/5710b0d9N0bbe4a01.png"></image></a>
@@ -270,36 +270,36 @@
     <!--s 常规商品楼层-->
     <section class="goodsList-block shops-block wrap-flr" id="flr6">
         <div class="floor-title">
-            <h2 class="flr-hd-6 flr-hd"><img src="http://img14.360buyimg.com/cms/jfs/t2833/326/406872613/3108/e9b37f2f/5710b0d8N7e3e03c1.png" alt=""/></h2>
+            <h2 class="flr-hd-6 flr-hd"><img src="//img14.360buyimg.com/cms/jfs/t2833/326/406872613/3108/e9b37f2f/5710b0d8N7e3e03c1.png" alt=""/></h2>
         </div>
-        <ul id="list6" class="shops-list clearfix" markettplid="listShop" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw1570cd96db05df.js" marketonload="xmlLoad(1);">
+        <ul id="list6" class="shops-list clearfix" markettplid="listShop" marketurl="//acen.jd.com/tjw/get/tjw2015/tjw1570cd96db05df.js" marketonload="xmlLoad(1);">
         </ul>
     </section>
     <!--e 常规商品楼层-->
     <!--s 常规商品楼层-->
     <section class="goodsList-block shops-block wrap-flr" id="flr7">
         <div class="floor-title">
-            <h2 class="flr-hd-7 flr-hd"><img src="http://img14.360buyimg.com/cms/jfs/t1855/160/2645613697/4058/f6fec50e/5710b0d8N3a285284.png" alt=""/></h2>
+            <h2 class="flr-hd-7 flr-hd"><img src="//img14.360buyimg.com/cms/jfs/t1855/160/2645613697/4058/f6fec50e/5710b0d8N3a285284.png" alt=""/></h2>
         </div>
-        <ul id="list7" class="shops-list clearfix" markettplid="listShop" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw1570cdb07c6af0.js" marketonload="xmlLoad(1);">
+        <ul id="list7" class="shops-list clearfix" markettplid="listShop" marketurl="//acen.jd.com/tjw/get/tjw2015/tjw1570cdb07c6af0.js" marketonload="xmlLoad(1);">
         </ul>
     </section>
     <!--e 常规商品楼层-->
     <!--s 常规商品楼层-->
     <section class="goodsList-block shops-block wrap-flr" id="flr8">
         <div class="floor-title">
-            <h2 class="flr-hd-8 flr-hd"><img src="http://img11.360buyimg.com/cms/jfs/t2674/300/399447864/3275/4eb40f75/5710b0d8Nc919f3f0.png" alt=""/></h2>
+            <h2 class="flr-hd-8 flr-hd"><img src="//img11.360buyimg.com/cms/jfs/t2674/300/399447864/3275/4eb40f75/5710b0d8Nc919f3f0.png" alt=""/></h2>
         </div>
-        <ul id="list8" class="shops-list clearfix" markettplid="listShop" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw1570cdb19500c0.js" marketonload="xmlLoad(1);">
+        <ul id="list8" class="shops-list clearfix" markettplid="listShop" marketurl="//acen.jd.com/tjw/get/tjw2015/tjw1570cdb19500c0.js" marketonload="xmlLoad(1);">
         </ul>
     </section>
     <!--e 常规商品楼层-->
     <!--s 常规商品楼层-->
     <section class="goodsList-block shops-block wrap-flr" id="flr9">
         <div class="floor-title">
-            <h2 class="flr-hd-9 flr-hd"><img src="http://img14.360buyimg.com/cms/jfs/t2599/185/394598153/4360/d5273d3c/5710b0d8N0bd30f85.png" alt=""/></h2>
+            <h2 class="flr-hd-9 flr-hd"><img src="//img14.360buyimg.com/cms/jfs/t2599/185/394598153/4360/d5273d3c/5710b0d8N0bd30f85.png" alt=""/></h2>
         </div>
-        <ul id="list9" class="shops-list clearfix" markettplid="listShop" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw1570cdb2557b36.js" marketonload="xmlLoad(1);">
+        <ul id="list9" class="shops-list clearfix" markettplid="listShop" marketurl="//acen.jd.com/tjw/get/tjw2015/tjw1570cdb2557b36.js" marketonload="xmlLoad(1);">
         </ul>
     </section>
     <!--e 常规商品楼层-->
@@ -342,7 +342,7 @@
 <script type="text/html" id="list1Tpl">
     {% var t = ((normalPrice - jdPrice)/normalPrice) * 100; %}
     <li>
-        <a href="http://m.jd.ru/{%= id %}.html" hasclstag="true" class="li-href" spuid="{%= id %}">
+        <a href="//m.jd.ru/{%= id %}.html" hasclstag="true" class="li-href" spuid="{%= id %}">
             <div class="j-pic">
                 <img src="{%=image%}">
             </div>
@@ -376,7 +376,7 @@
 <script type="text/html" id="miaoNextTpl">
     {% var t = ((normalPrice - jdPrice)/normalPrice) * 100; %}
     <li>
-        <a href="http://m.jd.ru/{%= id %}.html" hasclstag="true" class="li-href" spuid="{%= id %}">
+        <a href="//m.jd.ru/{%= id %}.html" hasclstag="true" class="li-href" spuid="{%= id %}">
             <div class="j-pic">
                 <img src="{%=image%}">
             </div>
@@ -416,7 +416,7 @@
 <script type="text/html" id="listHot">
     {% var t = ((normalPrice - jdPrice)/normalPrice) * 100; %}
     <li>
-        <a href="http://m.jd.ru/{%= id %}.html" hasclstag="true" class="li-href" spuid="{%= id %}">
+        <a href="//m.jd.ru/{%= id %}.html" hasclstag="true" class="li-href" spuid="{%= id %}">
             <div class="j-pic">
                 <img src="{%=image%}">
             </div>
