--- a/overseas/pc/421.html
+++ b/overseas/pc/421.html
@@ -181,7 +181,7 @@
         .goods-btn-wish .wish-tips{position: absolute;top: 30px;left: 0;padding: 0 3px;height: auto;line-height: 1.2;display: none;font-size: 12px;color: #f00000;text-align: left;}
         .goods-btn-wish .goods-href-wished{display: none;}
         .goods-btn-wish-used .goods-href-wished{display: block;}
-        .wrap-pre .goods-btn-wish,.miaosha-next .goods-btn-wish{display: block}
+        .wrap-pre .goods-btn-wish,.miaosha-next .goods-btn-wish,.miaosha-today-unstart .goods-btn-wish{display: block}
         /* nav */
         .wrapper .goods-nav-wrap{width: 100%;height: 80px;border-bottom: 4px solid #30c7a6;text-align: center;overflow: hidden;background-color: #f50d2d;}
         .wrapper .goods-nav ul{margin-right: -1px;}
