v8：修改分享图片

--- a/tongtianta/1001.html
+++ b/tongtianta/1001.html
@@ -1172,7 +1172,7 @@
                                     title   : 'Joy手机游乐园  品牌打卡赢神券',
                                     content : 'Joy手机游乐园  品牌打卡赢神券',
                                     url     : 'http://h5.m.jd.com/active/3SuRYXJPCmnjBnib1FUVhUmvTG3/index.html',
-                                    img     : 'http://img12.360buyimg.com/cms/jfs/t3052/363/1513970130/12752/bb074aac/57ce649bNb5a7ef99.jpg',
+                                    img     : 'http://img30.360buyimg.com/cms/jfs/t3307/253/2923700332/10513/c76531d4/57e928adN0a216fc9.png',
                                     channel : '',
                                     callback: function () {
                                         $('#closeBtn2').trigger('click');
